fix-overflow-cv

--- a/src/Components/PDFViewer/style.module.css
+++ b/src/Components/PDFViewer/style.module.css
@@ -1,7 +1,7 @@
 .home {
     background: #2a6877;
     overflow-x: hidden;
-    overflow-y: hidden;
+    height: 100vh;
 }
 
 .cvContent {
